[gd_scene load_steps=10 format=3 uid="uid://bw4ru2pi3ea3r"]

[ext_resource type="Script" path="res://ui/user_ui_root.gd" id="1_c31da"]
[ext_resource type="Texture2D" uid="uid://ymuuc1vrwqmv" path="res://icon.svg" id="1_le722"]
[ext_resource type="Script" path="res://ui/information_popup_control.gd" id="2_bnl34"]
[ext_resource type="Script" path="res://ui/description_scroll_container.gd" id="2_uj4s2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydxl4"]
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u0pg2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n81ai"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot7it"]
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61s1f"]
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="UserUIRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c31da")

[node name="SearchControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SearchBarControl" type="Control" parent="SearchControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="ToSearchBarPanel" type="Panel" parent="SearchControl/SearchBarControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ydxl4")

[node name="ToSearchBarHSplitContainer" type="HSplitContainer" parent="SearchControl/SearchBarControl/ToSearchBarPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 40
dragger_visibility = 1

[node name="ToSearchBarTextureRect" type="TextureRect" parent="SearchControl/SearchBarControl/ToSearchBarPanel/ToSearchBarHSplitContainer"]
layout_mode = 2
texture = ExtResource("1_le722")
expand_mode = 1

[node name="ToSearchBarLineEdit" type="LineEdit" parent="SearchControl/SearchBarControl/ToSearchBarPanel/ToSearchBarHSplitContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_u0pg2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n81ai")
placeholder_text = "Search for a room..."
caret_blink = true

[node name="FromSearchBarPanel" type="Panel" parent="SearchControl/SearchBarControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ydxl4")

[node name="FromSearchBarHSplitContainer" type="HSplitContainer" parent="SearchControl/SearchBarControl/FromSearchBarPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 40
dragger_visibility = 1

[node name="FromSearchBarTextureRect" type="TextureRect" parent="SearchControl/SearchBarControl/FromSearchBarPanel/FromSearchBarHSplitContainer"]
layout_mode = 2
texture = ExtResource("1_le722")
expand_mode = 1

[node name="FromSearchBarLineEdit" type="LineEdit" parent="SearchControl/SearchBarControl/FromSearchBarPanel/FromSearchBarHSplitContainer"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(0.31802, 0.31802, 0.31802, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_u0pg2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n81ai")
placeholder_text = "Search for a room..."
caret_blink = true

[node name="DistanceLabel" type="Label" parent="SearchControl/SearchBarControl"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 115.0
offset_right = 11.0
offset_bottom = 165.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="DistancePanel" type="Panel" parent="SearchControl/SearchBarControl/DistanceLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ot7it")

[node name="NavigationButton" type="Button" parent="SearchControl/SearchBarControl"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.0
offset_top = 115.0
offset_bottom = 165.0
grow_horizontal = 0
grow_vertical = 2
text = "Stop Navigation"

[node name="ScreenElementsControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -230.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="LeftControl" type="Control" parent="ScreenElementsControl"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 640.0
grow_vertical = 2
mouse_filter = 1

[node name="LevelUpButton" type="Button" parent="ScreenElementsControl/LeftControl"]
layout_mode = 0
offset_left = 40.0
offset_right = 115.0
offset_bottom = 50.0
text = "Level Up"

[node name="LevelDownButton" type="Button" parent="ScreenElementsControl/LeftControl"]
layout_mode = 0
offset_left = 40.0
offset_top = 70.0
offset_right = 138.0
offset_bottom = 120.0
text = "Level Down"

[node name="LevelIndicatorLabel" type="Label" parent="ScreenElementsControl/LeftControl"]
layout_mode = 0
offset_left = 50.0
offset_top = 140.0
offset_right = 51.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="LevelIndicatorPanel" type="Panel" parent="ScreenElementsControl/LeftControl/LevelIndicatorLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ot7it")

[node name="RightControl" type="Control" parent="ScreenElementsControl"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="ZoomInButton" type="Button" parent="ScreenElementsControl/RightControl"]
layout_direction = 3
layout_mode = 2
offset_left = 40.0
offset_top = 70.0
offset_right = 93.0
offset_bottom = 120.0
text = "Zoom In"

[node name="ZoomOutButton" type="Button" parent="ScreenElementsControl/RightControl"]
layout_direction = 3
layout_mode = 2
offset_left = 40.0
offset_top = 140.0
offset_right = 91.0
offset_bottom = 190.0
text = "Zoom Out"

[node name="InformationPopupControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bnl34")

[node name="InformationPopupVBoxContainer" type="VBoxContainer" parent="InformationPopupControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -145.5
offset_right = 140.5
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="InformationPopupControl/InformationPopupVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Barrow"

[node name="InformationPopupPanel" type="Panel" parent="InformationPopupControl/InformationPopupVBoxContainer/NameLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 10.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61s1f")

[node name="LecturersLabel" type="Label" parent="InformationPopupControl/InformationPopupVBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Lecturers: "
autowrap_mode = 3

[node name="BuildingLetterLabel" type="Label" parent="InformationPopupControl/InformationPopupVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Building Letter: "

[node name="DescriptionScrollContainer" type="ScrollContainer" parent="InformationPopupControl/InformationPopupVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
script = ExtResource("2_uj4s2")

[node name="DescriptionLabel" type="Label" parent="InformationPopupControl/InformationPopupVBoxContainer/DescriptionScrollContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "This is a long piece of text fnjvhuufuerhuvnjdfvfndsfiowjsf;jv jsdfvmdfvdfvdfvbhbhhbfvjnf fudid hgh fhfuhe fh udd hf dfh fduf udfb dhd fh dfhbdf  jkfd dfkhh kfd fh df hf hkdfh klfdbhkfdbkvf bhkfdbfv b vfb bkkfvjkvfnnjvjkfjkkj dkbv fbhk fvfd ew  we de sf sd feyiweu hlew uifhlueflewfhwuehfl eufhwehfwlhwefhsfsjsdkhfj s"
autowrap_mode = 3

[connection signal="text_changed" from="SearchControl/SearchBarControl/ToSearchBarPanel/ToSearchBarHSplitContainer/ToSearchBarLineEdit" to="." method="_on_to_search_bar_line_edit_text_changed"]
[connection signal="text_changed" from="SearchControl/SearchBarControl/FromSearchBarPanel/FromSearchBarHSplitContainer/FromSearchBarLineEdit" to="." method="_on_from_search_bar_line_edit_text_changed"]
[connection signal="button_down" from="SearchControl/SearchBarControl/NavigationButton" to="." method="_on_navigation_button_button_down"]
[connection signal="button_down" from="ScreenElementsControl/LeftControl/LevelUpButton" to="." method="_on_level_up_button_button_down"]
[connection signal="button_down" from="ScreenElementsControl/LeftControl/LevelDownButton" to="." method="_on_level_down_button_button_down"]
[connection signal="button_down" from="ScreenElementsControl/RightControl/ZoomInButton" to="." method="_on_zoom_in_button_button_down"]
[connection signal="button_down" from="ScreenElementsControl/RightControl/ZoomOutButton" to="." method="_on_zoom_out_button_button_down"]
